Add Json benchmarks

--- a/.env.local.example
+++ b/.env.local.example
@@ -3,4 +3,5 @@ APP_SECRET=change_me
 
 # Edit this file and set your own DB credentials.
 # If your password contains special characters, URL-encode it (e.g. '&' => %26, '@' => %40).
+# In Symfony `.env*` files, escape percent signs as `%%` (e.g. %26 => %%26).
 DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=16&charset=utf8"
