--- a/.env
+++ b/.env
@@ -32,5 +32,5 @@ DEFAULT_URI=http://localhost
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data_%kernel.environment%.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
-DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=16&charset=utf8"
+DATABASE_URL="postgresql://postgres:postgres@127.0.0.1:5432/package_performance?serverVersion=16&charset=utf8"
 ###< doctrine/doctrine-bundle ###
